:recycle: [Refactor] 연관 레크레이션 함수 이름변경 및 즐겨찾기 로직 수정